--- a/src/app/pages/seller-offerings/offerings/seller-offer/new-price-plan/new-price-plan.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/new-price-plan/new-price-plan.component.html
@@ -1,5 +1,5 @@
 @if(showProfile){
-    <div (click)="$event.stopPropagation();" [ngClass]="showProfile ? 'backdrop-blur-sm': ''" tabindex="-1"  class="fixed h-screen w-full md:w-3/4 top-0 right-0 z-50 p-4 overflow-y-auto bg-white dark:bg-gray-800" tabindex="-1" aria-labelledby="drawer-label">
+    <div (click)="$event.stopPropagation();" [ngClass]="showProfile ? 'backdrop-blur-sm': ''" tabindex="-1"  class="fixed h-screen w-full md:w-2/3 top-0 right-0 z-50 p-4 overflow-y-auto bg-white dark:bg-gray-800" tabindex="-1" aria-labelledby="drawer-label">
         <button type="button" (click)="showProfile=!showProfile" aria-controls="drawer-example" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 absolute top-2.5 end-2.5 flex items-center justify-center dark:hover:bg-gray-600 dark:hover:text-white" >
            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
@@ -20,15 +20,21 @@
                         max="{{char?.productSpecCharacteristicValue[0].valueTo}}"
                         value="{{char?.productSpecCharacteristicValue[0].value}}"
                         class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700">
-                        <span class="text-sm text-gray-500 dark:text-gray-400 absolute start-0 -bottom-6">Min ({{char?.productSpecCharacteristicValue[0].valueFrom}})</span>
-                        <span class="text-sm text-gray-500 dark:text-gray-400 absolute start-1/2 -bottom-6">{{char?.productSpecCharacteristicValue[0].value}}</span>
-                        <span class="text-sm text-gray-500 dark:text-gray-400 absolute end-0 -bottom-6">Max ({{char?.productSpecCharacteristicValue[0].valueTo}})</span>
+                        <span class="text-sm text-gray-500 dark:text-gray-400 absolute start-0 -bottom-6">Min ({{char?.productSpecCharacteristicValue[0].valueFrom}} {{char?.productSpecCharacteristicValue[0].unitOfMeasure}})</span>
+                        @if(char?.productSpecCharacteristicValue[0].value){
+                            <span class="text-sm text-gray-500 dark:text-gray-400 absolute start-1/2 -bottom-6">{{char?.productSpecCharacteristicValue[0].value}} {{char?.productSpecCharacteristicValue[0].unitOfMeasure}}</span>
+                        }                        
+                        <span class="text-sm text-gray-500 dark:text-gray-400 absolute end-0 -bottom-6">Max ({{char?.productSpecCharacteristicValue[0].valueTo}} {{char?.productSpecCharacteristicValue[0].unitOfMeasure}})</span>
                     </div>
                 }@else{
                     <select id="type" (change)="changePriceProfileCharValue(char,$event)"
                     class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                         @for (val of char?.productSpecCharacteristicValue; track val.value; let validx = $index) {
-                            <option [selected]="val.isDefault==true" value="{{val.value}}">{{val.value}}</option>
+                            @if(hasKey(val, 'unitOfMeasure')){
+                                <option [selected]="val.isDefault==true" value="{{val.value}}">{{val.value}} ({{val.unitOfMeasure}})</option>
+                            } @else {
+                                <option [selected]="val.isDefault==true" value="{{val.value}}">{{val.value}}</option>
+                            }
                         }
                     </select>
                 }
@@ -52,7 +58,7 @@
     </div>
 }
 @if(showPriceComponents){
-    <div (click)="$event.stopPropagation();" [ngClass]="showPriceComponents ? 'backdrop-blur-sm': ''" tabindex="-1"  class="fixed h-screen w-full md:w-3/4 top-0 right-0 z-50 p-4 overflow-y-auto bg-white dark:bg-gray-800" tabindex="-1" aria-labelledby="drawer-label">
+    <div (click)="$event.stopPropagation();" [ngClass]="showPriceComponents ? 'backdrop-blur-sm': ''" tabindex="-1"  class="fixed h-screen w-full md:w-2/3 top-0 right-0 z-50 p-4 overflow-y-auto bg-white dark:bg-gray-800" tabindex="-1" aria-labelledby="drawer-label">
         <button type="button" (click)="showPriceComponents=!showPriceComponents" aria-controls="drawer-example" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 absolute top-2.5 end-2.5 flex items-center justify-center dark:hover:bg-gray-600 dark:hover:text-white" >
            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
@@ -199,8 +205,12 @@
                                 @if(hideStringCharOption){
                                     <option value="">Select a value</option>
                                 }  
-                                @for(val of selectedCharacteristic.productSpecCharacteristicValue; track val){                                    
-                                    <option value="{{val.value}}">{{val.value}}</option>
+                                @for(val of selectedCharacteristic.productSpecCharacteristicValue; track val){
+                                    @if(hasKey(val, 'unitOfMeasure')){
+                                        <option value="{{val.value}}">{{val.value}} ({{val.unitOfMeasure}})</option>
+                                    } @else {
+                                        <option value="{{val.value}}">{{val.value}}</option>
+                                    }
                                 }
                             </select>
                         }
@@ -419,7 +429,7 @@
                 <select id="type" (change)="onPriceUnitChange($event)" class="mb-2 shadow bg-white dark:bg-secondary-300 border border-gray-300 text-gray-900 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     @for(curr of currencies; track curr.code){
                         <option value="{{curr.code}}" [selected]="curr.code === selectedPriceUnit">({{curr.code}}) {{curr.name}}</option>
-                    }                                             
+                    }                     
                 </select>
                 @if(selectedProdSpec.productSpecCharacteristic.length>0){
                     @if(!touchedCharCheck){
